--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -47,7 +47,7 @@
         
     </div>
     <!--Add a dealer table here -->
-    <h1></br>Our dealerships</h3>
+    <h1><center></br>Our dealerships</center></h1>
     <!-- Dealer table -->
     <div class="container">
         <table class="table" id="table" data-filter-control="true">
@@ -81,7 +81,7 @@
             $('#table').bootstrapTable()
         })
     </script>
-{% endblock %}
+
     </body>
 
 </html>
